--- a/Survey/Properties/Resources.resx
+++ b/Survey/Properties/Resources.resx
@@ -124,6 +124,9 @@
   <data name="Custom-Icon-Design-Mono-General-2-Edit.64" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Custom-Icon-Design-Mono-General-2-Edit.64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="hand-7702606_1280" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\hand-7702606_1280.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="man-3653346_1280" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\man-3653346_1280.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
