--- a/Survey/Properties/Messages.resx
+++ b/Survey/Properties/Messages.resx
@@ -118,10 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Error_Create" xml:space="preserve">
-    <value>Failed to create a new record!!</value>
+    <value>Registration failed!!</value>
   </data>
   <data name="Error_Delete" xml:space="preserve">
-    <value>Failed to delete record!!</value>
+    <value>Failed to delete!!</value>
   </data>
   <data name="Error_Process" xml:space="preserve">
     <value>Failed to process data!!</value>
@@ -133,19 +133,25 @@
     <value>Your input is too short!!</value>
   </data>
   <data name="Error_Update" xml:space="preserve">
-    <value>Failed to update record!!</value>
+    <value>Failed to update!!</value>
   </data>
   <data name="Info_CreateSuccess" xml:space="preserve">
-    <value>New record created successfully!</value>
+    <value>Registration successful!</value>
   </data>
   <data name="Info_DeleteSuccess" xml:space="preserve">
-    <value>Record deleted successfully!</value>
+    <value>Delete successful!</value>
   </data>
   <data name="Info_UpdateSuccess" xml:space="preserve">
-    <value>Record updated successfully!</value>
+    <value>Update successful!</value>
+  </data>
+  <data name="Warning_AccessDenied" xml:space="preserve">
+    <value>Access denied!</value>
   </data>
   <data name="Warning_Delete" xml:space="preserve">
     <value>Are you sure to delete this record?</value>
+  </data>
+  <data name="Warning_Fill" xml:space="preserve">
+    <value>Please fill in all fields!</value>
   </data>
   <data name="Warning_Login" xml:space="preserve">
     <value>Incorrect password or user name!</value>
